Fixing rafter details being invisible in light mode

--- a/_sass/_about.scss
+++ b/_sass/_about.scss
@@ -100,7 +100,6 @@
   }
 
   .rafter-details {
-    color: $text-white;
     i {
       visibility: hidden;
     }
